@@ -66,6 +66,14 @@
                     </execution>
                 </executions>
             </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.22.2</version>
+            <configuration>
+                <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+            </configuration>
+        </plugin>
         </plugins>
         <resources>
             <resource>
@@ -119,7 +127,7 @@
             <groupId>net.kyori</groupId>
             <artifactId>adventure-api</artifactId>
             <version>4.17.0</version>
-            <scope>provided</scope>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>me.clip</groupId>
@@ -133,5 +141,31 @@
             <version>1.3.2</version>
             <scope>provided</scope>
         </dependency>
+
+    <!-- Test Dependencies -->
+    <dependency>
+        <groupId>com.github.seeseemelk</groupId>
+        <artifactId>MockBukkit-v1.18</artifactId>
+        <version>2.85.2</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-api</artifactId>
+        <version>5.10.0</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>net.kyori</groupId>
+        <artifactId>adventure-api</artifactId>
+        <version>4.17.0</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>net.kyori</groupId>
+        <artifactId>adventure-text-serializer-gson</artifactId>
+        <version>4.17.0</version>
+        <scope>test</scope>
+    </dependency>
     </dependencies>
 </project>
